[package]
name = "input_buffer"
description = "A peekable FIFO-like buffer for receiving network data efficiently"
authors = ["Alexey Galakhov <agalakhov@snapview.de>"]
categories = ["network-programming"]
keywords = ["io"]
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/snapview/input_buffer"
repository = "https://github.com/snapview/input_buffer"
documentation = "https://docs.rs/input_buffer/0.3.1"
version = "0.5.0"
edition = "2018"

[dependencies]
bytes = "1.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "reading"
harness = false
